--- a/compose.yaml
+++ b/compose.yaml
@@ -4,8 +4,8 @@ services:
   container_name: backend
   image: back_sas_img:1
   build:
-   context: /
-   dockerfile: /sas/kw1_BingChilling_Infrastructure/dockerfiles/backend_multistage_dockerfile
+   context: ..
+   dockerfile: ./kw1_BingChilling_Infrastructure/dockerfiles/backend_multistage_dockerfile
   ports:
    - 8080:8080
   depends_on:
@@ -22,25 +22,22 @@ services:
    - MYSQL_USER=dev1
    - MYSQL_PASSWORD=123
    - MYSQL_DATABASE=sqlserversas
-#  env_file:
-#   - password_root.env
   volumes:
    - /sas/mysql:/var/lib/mysql
   networks:
    - sas_network
-#  ports:
-#   - 3306:3306
+  ports:
+   - 3306:3306
  frontend:
   container_name: frontend
   image: front_sas_img:1
   build:
-   context: /
-   dockerfile: /sas/kw1_BingChilling_Infrastructure/dockerfiles/frontend_multistage_dockerfile
+   context: ..
+   dockerfile: ./kw1_BingChilling_Infrastructure/dockerfiles/frontend_multistage_dockerfile
   ports:
    - 80:80
   depends_on:
    - backend
 networks:
   sas_network:
-#   name:sas_network 
   
