--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -2,7 +2,7 @@ name: VPN Automation
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   vpn-automation:
     runs-on: ubuntu-latest
