--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Connect to VPN
         uses: kota65535/github-openvpn-connect-action@v2
         with:
-          config_file: ./sit-client.ovpn
+          config_file: ./github/workflows/sit-client.ovpn
           username: 64130500014
           password: "!ManisocN20kmutt"
       - name: Run automation script
