--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -7,6 +7,15 @@ jobs:
   vpn-automation:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install OpenVPN
+        run: |
+          sudo apt update
+          sudo apt install -y openvpn openvpn-systemd-resolved
+      - name: Connect to VPN
+        uses: "kota65535/github-openvpn-connect-action@v2"
       - name: Run automation script
         run: |
-          pwd
+          cd /path/to/automation/script
+          python automation.py
