--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           sudo apt update
           sudo apt install -y openvpn openvpn-systemd-resolved
-          sudo modprobe tun
+          sudo openvpn --mktun --dev tun0
       - name: Connect to VPN
         uses: kota65535/github-openvpn-connect-action@v2
         with:
