--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -20,3 +20,6 @@ jobs:
           config_file: ./vpn-st.ovpn
           username: 64130500014
           password: "!ManisocN20kmutt"
+      - name: Deploy
+        run: |
+          ssh moniyom@$ip22kw1.sit.kmutt.ac.th "ls -al"
