--- a/.github/workflows/vpn-automation.yml
+++ b/.github/workflows/vpn-automation.yml
@@ -27,4 +27,4 @@ jobs:
          username: moniyom
          password: 12345678
          port: 22
-         script: whoami
+         script: cd /home/moniyom/kw1_BingChilling_Frontend/ && git pull && cd /home/moniyom/kw1_BingChilling_Backend/ && git pull && cd /home/moniyom/kw1_BingChilling_Infrastructure/ && docker compose build   && docker compose up -d && docker system prune --all --volumes --force
