--- a/.github/workflows/deploy_vpn.yml
+++ b/.github/workflows/deploy_vpn.yml
@@ -28,4 +28,4 @@ jobs:
          username: ${{ secrets.SERVER_USERNAME }}
          password: ${{ secrets.SERVER_PASS}}
          port: 22
-         script: cd /home/moniyom/kw1_BingChilling_Frontend/ && git pull && cd /home/moniyom/kw1_BingChilling_Backend/ && git pull && cd /home/moniyom/kw1_BingChilling_Infrastructure/ && docker compose build   && docker compose up -d 
+         script: docker system prune --all --volumes --force && cd /home/moniyom/kw1_BingChilling_Frontend/ && git pull && cd /home/moniyom/kw1_BingChilling_Backend/ && git pull && cd /home/moniyom/kw1_BingChilling_Infrastructure/ && docker compose build   && docker compose up -d 
