--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -8,7 +8,7 @@ http {
         listen 80;
 
         location /api {
-            proxy_pass http://backend:8080/;
+            proxy_pass http://backend:8080;
         }
 
         location / {
