--- a/nginx-proxy.conf
+++ b/nginx-proxy.conf
@@ -2,9 +2,10 @@ worker_processes auto;
 events { worker_connections 1024; }
 
 http {
-    sendfile on;
+#    sendfile on;
 
     server {
+#        server_name intproj22.sit.kmutt.ac.th/kw1/;
         listen 80;
 
         location /api {
