--- a/compose.yaml
+++ b/compose.yaml
@@ -1,12 +1,20 @@
-version: "3.8"
+version: '3.8'
 services:
   nginx-reverse-proxy:
-    image: nginx:latest
+#    image: nginxproxy/nginx-proxy
+    image: nginx:latest 
     container_name: nginx-reverse-proxy
+    restart: unless-stopped
     ports:
       - '80:80'
+    #  - '443:443'
     volumes:
-      - './nginx-proxy.conf:/etc/nginx/nginx.conf:ro'
+     # - '/home/moniyom/cerbot/default.conf:/etc/nginx/conf.d/default.conf'
+     - './nginx-proxy.conf:/etc/nginx/nginx.conf:ro'
+     # - '/var/run/docker.sock:/tmp/docker.sock:ro'
+     # - './nginx/html:/usr/share/nginx/html'
+     # - './nginx/certs:/etc/nginx/certs'
+     # - './nginx/vhost:/etc/nginx/vhost.d'
     networks:
       - sas_network
     depends_on:
@@ -14,19 +22,21 @@ services:
       - frontend
   backend:
     container_name: backend
-    image: back_sas_img:1
+    image: 'back_sas_img:1'
     build:
       context: ..
-      dockerfile: ./kw1_BingChilling_Infrastructure/dockerfiles/backend_multistage_dockerfile
+      dockerfile: >-
+        ./kw1_BingChilling_Infrastructure/dockerfiles/backend_multistage_dockerfile
     ports:
-      - 8080:8080
+      - '8080:8080'
     depends_on:
       - mysql
     networks:
       - sas_network
       - sas_data
+    restart: unless-stopped
   mysql:
-    image: mysql:8.0.33
+    image: 'mysql:8.0.33'
     container_name: dbserver
     environment:
       - MYSQL_ROOT_PASSWORD=123
@@ -36,23 +46,40 @@ services:
       - MYSQL_PASSWORD=123
       - MYSQL_DATABASE=sqlserversas
     volumes:
-      - /sas/mysql:/var/lib/mysql
+      - '/sas/mysql:/var/lib/mysql'
     networks:
       - sas_data
     ports:
-      - 3306:3306
+      - '3306:3306'
+    restart: unless-stopped
   frontend:
     container_name: frontend
-    image: front_sas_img:1
+    restart: unless-stopped
+    image: 'front_sas_img:1'
     build:
       context: ..
-      dockerfile: ./kw1_BingChilling_Infrastructure/dockerfiles/frontend_multistage_dockerfile
+      dockerfile: >-
+        ./kw1_BingChilling_Infrastructure/dockerfiles/frontend_multistage_dockerfile
     networks:
       - sas_network
     ports:
-      - 800:80
+      - '800:80'
     depends_on:
       - backend
+    environment:
+      VIRTUAL_HOST: intproj22.sit.kmutt.ac.th/kw1
+      LETSENCRYPT_HOST: intproj22.sit.kmutt.ac.th/kw1
+  #letsencrypt-companion:
+   # container_name: letsencrypt-companion
+    #image: jrcs/letsencrypt-nginx-proxy-companion
+    #restart: unless-stopped
+    #volumes_from:
+    #  - nginx-reverse-proxy
+    #volumes:
+    #  - '/var/run/docker.sock:/var/run/docker.sock'
+    #  - './nginx/acme:/etc/acme.sh'
+    #environment:
+     # DEFAULT_EMAIL: Chalunthorn.niyom@mail.kmutt.ac.th
 networks:
-  sas_network:
-  sas_data:
+  sas_network: null
+  sas_data: null
