--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -5,6 +5,11 @@ server {
 
     #access_log  /var/log/nginx/host.access.log  main;
 
+    location /kw1 {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+        try_files $uri $uri/ /index.html;
+    }
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
