--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
   nginx-reverse-proxy:
     image: nginx:latest 
     container_name: nginx-reverse-proxy
-#    restart: unless-stopped
+    restart: unless-stopped
     ports:
       - '80:80'
       - '443:443'
