--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -47,7 +47,7 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
 
-        location /api {
+        location ~ /api {
             proxy_pass http://backend:8080;
         }
 
@@ -61,10 +61,10 @@ http {
         }
 
         # Security Headers
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' example.com;";
-        add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload;";
-        add_header X-Content-Type-Options nosniff;
-        add_header X-Frame-Options DENY;
-        add_header X-XSS-Protection "1; mode=block";
+        #add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' example.com;";
+        #add_header Strict-Transport-Security "max-age=31536000; includeSubdomains; preload;";
+        #add_header X-Content-Type-Options nosniff;
+        #add_header X-Frame-Options DENY;
+        #add_header X-XSS-Protection "1; mode=block";
     }
 }
