--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -19,8 +19,8 @@ http {
 
     server {
         listen 80;
-        server_name intproj22.sit.kmutt.ac.th;
-
+#        server_name intproj22.sit.kmutt.ac.th;
+        server_name ip22kw1.sit.kmutt.ac.th;
         location /api {
             proxy_pass http://backend:8080;
         }
