command auto redirect

--- a/nginx-proxy/conf.d/2default.conf
+++ b/nginx-proxy/conf.d/2default.conf
@@ -1,8 +1,8 @@
-worker_processes auto;
-
-events {
-    worker_connections 1024;
-}
+#worker_processes auto;
+#
+#events {
+#    worker_connections 1024;
+#}
 
 http {
     # MIME types configuration (optional)
