--- a/compose.yaml
+++ b/compose.yaml
@@ -8,7 +8,7 @@ services:
       - '80:80'
       - '443:443'
     volumes:
-     - './nginx-proxy/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro'
+     - './nginx-proxy/nginx.conf:/etc/nginx/nginx.conf:ro'
      - './nginx-proxy/ssl:/ssl/:rw'
     networks:
       - sas_network
