--- a/.github/workflows/deploy_vpn.yml
+++ b/.github/workflows/deploy_vpn.yml
@@ -11,21 +11,5 @@ jobs:
     runs-on: ip22kw1
     steps:
       - uses: actions/checkout@v3
-      - name: Install OpenVPN
-        run: |
-          sudo apt update
-          sudo apt install -y openvpn
-      - name: Connect to VPN
-        uses: "kota65535/github-openvpn-connect-action@v2"
-        with:
-          config_file: ./vpn-st.ovpn
-          username: ${{ secrets.VPN_USERNAME }}
-          password: ${{ secrets.VPN_PASSWORD }}
-      - name: executing remote ssh commands using password
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-         host: ${{ secrets.SERVER_HOST }}
-         username: ${{ secrets.SERVER_USERNAME }}
-         password: ${{ secrets.SERVER_PASS}}
-         port: 22
-         script:  cd /home/moniyom/kw1_BingChilling_Infrastructure/ && bash run.sh
+      - name: run Command
+       run:  cd /home/moniyom/kw1_BingChilling_Infrastructure/ && bash run.sh
