--- a/.github/workflows/deploy_vpn.yml
+++ b/.github/workflows/deploy_vpn.yml
@@ -16,13 +16,13 @@ jobs:
           set -e
 
           # Navigate to the infrastructure directory
-          cd ${{ secrets.infrastructure_dir }}  # Replace with the actual directory path
+          cd ${{ vars.infrastructure_dir }}  # Replace with the actual directory path
 
           # Pull the latest changes from the repository
           git pull
 
           # Start the Docker services defined in the specified compose file
-          docker-compose -f ${{ secrets.compose_file }} up -d  # Replace with the actual compose file path
+          docker-compose -f ${{ vars.compose_file }} up -d  # Replace with the actual compose file path
 
           # Provide feedback that the deployment process has started
           echo "Deployment process initiated."
