Update and rename .github/workflows/deploy_vpn.yml to .github/deploy_vpn.yml

--- a/.github/deploy_vpn.yml
+++ b/.github/deploy_vpn.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
 
+env:
+  infrastructure_dir: "/home/moniyom/kw1_BingChilling_Infrastructure/"
+  compose_file: "/home/moniyom/kw1_BingChilling_Infrastructure/compose.yaml"
+
 jobs:
   deploy:
     runs-on: linux
@@ -16,13 +20,13 @@ jobs:
           set -e
 
           # Navigate to the infrastructure directory
-          cd ${{ vars.infrastructure_dir }}  # Replace with the actual directory path
+          cd ${{ env.infrastructure_dir }}  # Replace with the actual directory path
 
           # Pull the latest changes from the repository
           git pull
 
           # Start the Docker services defined in the specified compose file
-          docker-compose -f ${{ vars.compose_file }} up -d  # Replace with the actual compose file path
+          docker-compose -f ${{ env.compose_file }} up -d  # Replace with the actual compose file path
 
           # Provide feedback that the deployment process has started
           echo "Deployment process initiated."
