--- a/.github/workflows/deploy_vpn.yml
+++ b/.github/workflows/deploy_vpn.yml
@@ -30,3 +30,5 @@ jobs:
 
           # Provide feedback that the deployment process has started
           echo "Deployment process initiated."
+          # Try to run docker compose prune
+          docker compose prune --all --volume -f || echo "Prune command failed, but continuing..."
