--- a/.github/workflows/deploy_vpn.yml
+++ b/.github/workflows/deploy_vpn.yml
@@ -31,4 +31,8 @@ jobs:
           # Provide feedback that the deployment process has started
           echo "Deployment process initiated."
           # Try to run docker compose prune
+      - name: Prune Docker
+        run: |
+          cd ${{ env.infrastructure_dir }}  # Navigate to the directory containing compose.yaml
           docker compose prune --all --volume -f || echo "Prune command failed, but continuing..."
+
