--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -21,6 +21,7 @@ http {
         listen 80;
 #        server_name intproj22.sit.kmutt.ac.th;
         server_name ip22kw1.sit.kmutt.ac.th;
+        return 301 https://$host$request_uri;
         location /api {
             proxy_pass http://backend:8080;
         }
@@ -28,7 +29,7 @@ http {
         location / {
             proxy_pass http://frontend;
         }
-
+        
         # Optional: Enable gzip compression
         # gzip on;
         # gzip_comp_level 5;
