--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -16,7 +16,7 @@ http {
 
     # Access log configuration (optional)
     access_log /var/log/nginx/access.log;
-
+    client_max_body_size 100M;
     server {
         listen 80;
 #        server_name intproj22.sit.kmutt.ac.th;
