--- a/nginx-proxy/nginx.conf
+++ b/nginx-proxy/nginx.conf
@@ -17,6 +17,7 @@ http {
     # Access log configuration (optional)
     access_log /var/log/nginx/access.log;
     client_max_body_size 100M;
+    client_header_buffer_size 5m;
     server {
         listen 80;
 #        server_name intproj22.sit.kmutt.ac.th;
