--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     client_max_body_size 100M;
+    client_header_buffer_size 5m;
     server {
         listen 80;
         server_name localhost;
